[gd_scene load_steps=22 format=1]

[ext_resource path="res://World/World.gd" type="Script" id=1]
[ext_resource path="res://tilesets/Floors.tres" type="TileSet" id=2]
[ext_resource path="res://tilesets/Walls.tres" type="TileSet" id=3]
[ext_resource path="res://World/Camera.gd" type="Script" id=4]
[ext_resource path="res://assets/graphics/tile/cursor.png" type="Texture" id=5]
[ext_resource path="res://World/Cursor.gd" type="Script" id=6]
[ext_resource path="res://themes/Vert.tres" type="Theme" id=7]
[ext_resource path="res://Main/LevelControl.tscn" type="PackedScene" id=8]
[ext_resource path="res://Main/TilePainter.tscn" type="PackedScene" id=9]
[ext_resource path="res://Main/TileInfo.tscn" type="PackedScene" id=10]
[ext_resource path="res://Main/Zoom.tscn" type="PackedScene" id=11]
[ext_resource path="res://Main/GenScreen.tscn" type="PackedScene" id=12]
[ext_resource path="res://Main/WorldPanel.tscn" type="PackedScene" id=13]
[ext_resource path="res://Main/WorldMenu.tscn" type="PackedScene" id=14]
[ext_resource path="res://Main/Prefs.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/fonts/04B_03__.TTF" type="DynamicFontData" id=16]
[ext_resource path="res://World/WorldFX.gd" type="Script" id=17]

[sub_resource type="CanvasItemShader" id=1]

_code = {
"fragment": "
uniform float radius=2.0;

uniform float amount=0.6;

float r = radius;
vec2 ps = TEXTURE_PIXEL_SIZE;


vec4 col = tex(TEXTURE,UV);


vec4 glow = col;

glow += tex(TEXTURE,UV+vec2(-r,-r)*ps);

glow += tex(TEXTURE,UV+vec2(-r,0)*ps);

glow += tex(TEXTURE,UV+vec2(-r,r)*ps);

glow += tex(TEXTURE,UV+vec2(0,-r)*ps);

glow += tex(TEXTURE,UV+vec2(0,r)*ps);

glow += tex(TEXTURE,UV+vec2(r,-r)*ps);

glow += tex(TEXTURE,UV+vec2(r,0)*ps);

glow += tex(TEXTURE,UV+vec2(r,r)*ps);

r*=2.0;

glow += tex(TEXTURE,UV+vec2(-r,-r)*ps);

glow += tex(TEXTURE,UV+vec2(-r,0)*ps);

glow += tex(TEXTURE,UV+vec2(-r,r)*ps);

glow += tex(TEXTURE,UV+vec2(0,-r)*ps);

glow += tex(TEXTURE,UV+vec2(0,r)*ps);

glow += tex(TEXTURE,UV+vec2(r,-r)*ps);

glow += tex(TEXTURE,UV+vec2(r,0)*ps);

glow += tex(TEXTURE,UV+vec2(r,r)*ps);


glow/=17.0;

glow*=amount;

col.rgb*=col.a;

COLOR=glow+col;",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}

[sub_resource type="CanvasItemMaterial" id=2]

shader/shader = SubResource( 1 )
shader/shading_mode = 0
shader_param/radius = 1.0
shader_param/amount = 1.0

[sub_resource type="DynamicFont" id=3]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 16 )

[sub_resource type="Environment" id=4]

ambient_light/enabled = false
ambient_light/color = Color( 0, 0, 0, 1 )
ambient_light/energy = 1.0
fxaa/enabled = false
background/mode = 5
background/color = Color( 0, 0, 0, 1 )
background/energy = 1.0
background/scale = 1.0
background/glow = 0.0
background/canvas_max_layer = null
glow/enabled = true
glow/blur_passes = 1
glow/blur_scale = 1.5
glow/blur_strength = 1.3
glow/blur_blend_mode = 2
glow/bloom = 1.4
glow/bloom_treshold = 0.5
dof_blur/enabled = false
dof_blur/blur_passes = 1
dof_blur/begin = 100.0
dof_blur/range = 10.0
hdr/enabled = false
hdr/tonemapper = 0
hdr/exposure = 0.4
hdr/white = 1.0
hdr/glow_treshold = 0.95
hdr/glow_scale = 0.2
hdr/min_luminance = 0.4
hdr/max_luminance = 8.0
hdr/exposure_adj_speed = 0.5
fog/enabled = false
fog/begin = 100.0
fog/begin_color = Color( 0, 0, 0, 1 )
fog/end_color = Color( 0, 0, 0, 1 )
fog/attenuation = 1.0
fog/bg = true
bcs/enabled = true
bcs/brightness = 1.0
bcs/contrast = 1.0
bcs/saturation = 1.0
srgb/enabled = false

[node name="World" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Floor" type="TileMap" parent="."]

mode = 1
tile_set = ExtResource( 2 )
cell/size = Vector2( 24, 12 )
cell/quadrant_size = 4
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 1
cell/y_sort = true
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 983068, 1, 983069, 1, 983070, 1, 983071, 1, 983072, 1, 983073, 1, 1048604, 1, 1048605, 1, 1048606, 1, 1048607, 1, 1048608, 1, 1048609, 1, 1114139, 1, 1114140, 1, 1114141, 1, 1114142, 1, 1114143, 1, 1114144, 1, 1114145, 1, 1179676, 1, 1179677, 4, 1179678, 1, 1179679, 1, 1179680, 1, 1179681, 1, 1245212, 4, 1245213, 4, 1245214, 4, 1245215, 1, 1310749, 4 )

[node name="Wall" type="TileMap" parent="."]

mode = 1
tile_set = ExtResource( 3 )
cell/size = Vector2( 24, 12 )
cell/quadrant_size = 4
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 1
cell/y_sort = true
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 917532, 3, 917533, 3, 983068, 3, 983070, 3, 983071, 3, 983072, 3, 983073, 3, 1048606, 3, 1048609, 3, 1114139, 3, 1114140, 5, 1114142, 3, 1114145, 3, 1114146, 3, 1179676, 5, 1179678, 3, 1179679, 3, 1179681, 3, 1179682, 3 )

[node name="Camera" type="Position2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 4 )

[node name="Camera" type="Camera2D" parent="Camera"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Cursor" type="Sprite" parent="."]

visibility/opacity = 0.5
visibility/blend_mode = 1
material/material = SubResource( 2 )
transform/pos = Vector2( 50, 146 )
z/z = 1
z/relative = false
texture = ExtResource( 5 )
offset = Vector2( 0, 3 )
region = true
region_rect = Rect2( 5, 28, 22, 18 )
script/script = ExtResource( 6 )

[node name="HUD" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="WorldSpace" type="Control" parent="HUD"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 7 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="LevelControl" parent="HUD/WorldSpace" instance=ExtResource( 8 )]

margin/left = 386.0
margin/top = 295.0
margin/right = 500.0
margin/bottom = 336.0

[node name="TilePainter" parent="HUD/WorldSpace" instance=ExtResource( 9 )]

margin/left = 386.0
margin/top = 110.0
margin/right = 501.0
margin/bottom = 289.0

[node name="TileInfo" parent="HUD/WorldSpace" instance=ExtResource( 10 )]

margin/left = 8.0
margin/top = 7.0
margin/right = 126.0
margin/bottom = 88.0

[node name="Zoom" parent="HUD/WorldSpace" instance=ExtResource( 11 )]

margin/left = 134.0
margin/top = 9.0
margin/right = 213.0
margin/bottom = 33.0

[node name="GenScreen" parent="HUD/WorldSpace" instance=ExtResource( 12 )]

visibility/visible = false

[node name="WorldPanel" parent="HUD/WorldSpace" instance=ExtResource( 13 )]

margin/top = 24.0
margin/right = 131.0
margin/bottom = 2.0

[node name="WorldMenu" parent="HUD/WorldSpace" instance=ExtResource( 14 )]

visibility/visible = false
margin/top = 59.0
margin/right = -53.0
margin/bottom = -113.0

[node name="Prefs" parent="HUD/WorldSpace" instance=ExtResource( 15 )]

visibility/visible = false

[node name="SaveIcon" type="Label" parent="HUD"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Saving..."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WorldFX" type="WorldEnvironment" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
environment = SubResource( 4 )
script/script = ExtResource( 17 )

[connection signal="level_changed" from="." to="HUD/WorldSpace/LevelControl" method="_on_World_level_changed"]

[connection signal="map_ready" from="." to="Camera" method="_on_World_map_ready"]

[connection signal="map_ready" from="." to="HUD/WorldSpace/TilePainter" method="_on_World_map_ready"]

[connection signal="cell_hovered" from="Cursor" to="HUD/WorldSpace/TileInfo" method="_on_Cursor_cell_hovered"]

[connection signal="mouse_enter" from="HUD/WorldSpace" to="." method="_set_in_worldspace" binds= [ true ]]

[connection signal="mouse_exit" from="HUD/WorldSpace" to="." method="_set_in_worldspace" binds= [ false ]]

[connection signal="level_changed" from="HUD/WorldSpace/LevelControl" to="." method="_on_LevelControl_level_changed"]

[connection signal="set_zoom" from="HUD/WorldSpace/Zoom" to="Camera" method="_on_Zoom_set_zoom"]


